syntax = "proto3";

package ecomm;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

message CustomerModel {
    int32 id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message CreateCustomerRequest {
    string name = 1;
    string email = 2;
}

message UpdateCustomerRequest {
    int32 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

service CustomerService {
    rpc CreateCustomer(CreateCustomerRequest) returns (CustomerModel);
    rpc GetCustomer(google.protobuf.Int32Value) returns (CustomerModel);
    rpc UpdateCustomer(UpdateCustomerRequest) returns (CustomerModel);
    rpc DeleteCustomer(google.protobuf.Int32Value) returns (google.protobuf.Empty);
    rpc ListCustomers(google.protobuf.Empty) returns (stream CustomerModel);
}